﻿v9.0
-----
+ Added an option to hide the "Empty Wishlist" button on users wishlist pages
+ Added additional search filtering options to hide games based on mixed or negative review scores
+ Added a search filter to exclude items over a certain price
+ Added a feature that dims unlocked achievement icons on progress pages
: Fixed a bug where some homepage elements weren't highlighted correctly
: Fixed a bug on workshop items where the media slider could distort images in some cases


v8.9
-----
+ Added sorting options to the "my sell listing" section of the market home page
: Updated visual layout of badge page sorting, filtering, and viewing options
: Fixed a bug where agegate pages would throw an error rather than correctly entering a date
: Fixed an issue with surprise logos not displaying correctly
: Fixed a bug with recommendations highlights on storefront
: Fixed a bug where invalid dynamic store data would be cached incorrectly
: Fixed a bug that caused items with quotes in their names to not show correct buttons in inventory
: Fixed a bug that displayed an incorrect wishlist total if some items were not yet available
: Fixed a bug where some home page elements weren't highlighted correctly

v8.8
-----
+ Added a version update dialog box to display a change log to the user when the extension is updated
+ The feature to automatically send age verification now works with new tag-based verification pages
+ Hovering over the red exclamation mark when a data request fails will show details of that request
+ The Enhanced Steam options can now be accessed directly from the Firefox about:addons page
+ Added an option to enable or disable displaying the game's purchase date on store pages
+ Added SteamRepCN links to user profiles when browsing in Chinese
+ Added Chinese name to game store page when browsing in Chinese
+ Added an option to see Keylol links and user ratings when browsing in Chinese