@@ -1,5 +1,6 @@
 {
     "post_history": "View post history",
+    "add_nickname": "Add Nickname",
     "forums": "Forums",
     "total_size": "Total Size",
     "dlc_details": "Downloadable Content Details",
